--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.9",
     "tailwindcss-animate": "^1.0.7",
-    "use-local-storage-state": "^19.5.0"
+    "use-local-storage-state": "^19.5.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
