--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,8 @@
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.0.0",
     "openai": "^4.85.4",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.2.0",
