--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "migration:generate": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm migration:generate -d ./src/config/ormconfig.ts",
-    "migration:run": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm migration:run -d ./src/config/ormconfig.ts"
+    "migration:run": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm migration:run -d ./src/config/ormconfig.ts",
+    "postinstall": "npm run migration:run"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
