Update for clarity in DB env vars

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,16 @@
+# For migrations and production
+# DB_URL=
+
+# Can use for development, if you don't want to use DB_URL
 DB_HOST=
 DB_PORT=
 DB_USERNAME=
 DB_PASSWORD=
 DB_NAME=
-DB_SYNCHRONIZE=
-DB_AUTO_LOAD_ENTITIES=
 
-# For migrations
-# DB_URL=
+DB_AUTO_LOAD_ENTITIES=true
+# only true for development
+DB_SYNCHRONIZE=true
 
 OPENAI_API_KEY=
 OPENAI_ASSISTANT_ID=
