--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -27,12 +27,14 @@ jobs:
 
       # Run Linter
       - name: Run Linter
+        working-directory: ./frontend
         id: lint
         run: npm run lint
         continue-on-error: true
 
       # Run Tests
       - name: Run Tests
+        working-directory: ./frontend
         id: test
         run: npm run test
         continue-on-error: true
