--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -25,6 +25,7 @@ jobs:
       # Install dependencies
       - name: Install dependencies
         run: npm install
+        working-directory: ./frontend
 
       # Run Linter
       - name: Run Linter
